Fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,25 @@
+
 body {
 	margin: 0;
 	font-family: Open Sans, sans-serif;
-	background-color: #6E0202;
-	background-repeat: no-repeat;
-    background-attachment: fixed;
-	background-size: cover;
+	background-color: white;
+	height: 100%;
+	overflow-x: hidden;
+}
+
+#background {
+	position: fixed;
+	z-index: -1;
+	top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    min-width: 100%;
+    min-height: 100%;
+    overflow: hidden;
 }
 
 video { 
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     min-width: 100%;
@@ -19,6 +30,12 @@ video {
     transform: translateX(-50%) translateY(-50%);
 	background-size: cover;
 	transition: 1s opacity;
+}
+
+a {
+	text-decoration: none;
+	outline: none;
+	color: inherit;
 }
 
 .empty {
@@ -42,15 +59,22 @@ video {
 	color: #1F0500;
 	font-weight: 700;
 	border-bottom: 1px solid #ddd;
+	font-size: 20px;
 }
 .nav-tab {
 	justify-self: flex-end;
-	margin-right: 2%;
 	transition: 0.4s;
+	margin-right: 1%;
+	height: 94%;
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-bottom: 5px solid white;
 }
 
 .nav-tab:hover {
-	transform: scale(1.1);
+	border-bottom: 5px solid #9C0305;
 }
 
 .nav-end {
@@ -214,7 +238,7 @@ video {
 #events-section {
 	margin-top: 500px;
 	width: 100%;
-	background-color: #F2F5F5;
+	background-color: white;
 	padding-top: 60px;
 	position: relative;
 	margin-bottom: 500px;
@@ -250,6 +274,8 @@ video {
 	margin: 50px 10% 10px 10%;
 	display: flex;
 	justify-content: center;
+	background-color: #F2F5F5;
+	padding: 30px;
 }
 
 .event-collage {
@@ -295,9 +321,8 @@ video {
 
 #membership-section {
 	width: 100%;
-	background-color: #E3E4E7;
+	background-color: white;
 	padding-top: 60px;
-	height: 600px;
 	position: relative;
 	margin-bottom: 500px;
 }
@@ -326,14 +351,73 @@ video {
 	margin: 50px 10% 10px 10%;
 }
 
+#membership-wrapper {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding-bottom: 100px;
+}
+
+#membership-center {
+	margin: 60px 10% 0 10%;
+	border: 1px solid #9C0305;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
+	max-width: 700px;
+	justify-self: center;
+}
+
+#membership-info {
+	margin: 40px 20px 0px 20px;
+}
+
+#join-button {
+	background-color: #9C0305;
+	transition: 0.5s;
+	border-radius: 5px;
+	font-weight: bold;
+	padding: 10px 20px;
+	font-size: 24px;
+	width: 200px;
+	margin: 20px 20px 40px 20px;
+	color: white;
+}
+
+#join-button:hover {
+	background-color: #CC0008;
+	transform: scale(1.1);
+}
+
+#facebook {
+    background: #3B5998;
+    color: white;
+    transition: 0.5s;
+    padding: 10px 20px;
+    border-radius: 5px;
+    width: 200px;
+    width: 200px;
+    font-weight: bold;
+    font-size: 24px;
+    text-align: center;
+    text-decoration: none;
+    margin: 20px 20px 40px 20px;
+}
+
+#facebook:hover {
+	background-color: #4C77D0;
+	transform: scale(1.1);
+}
+
 #us-section {
 	width: 100%;
 	background-color: #F2F5F5;
 	padding-top: 60px;
-	height: 600px;
 	position: relative;
 	margin-bottom: 500px;
 }
+
 
 #us-section:before {
 	content: '';
@@ -356,8 +440,37 @@ video {
 	color: #9C0305;
 	font-weight: 700;
 	font-size: 27px;
-	margin: 50px 10% 10px 10%;
+	margin: 50px 10% 0px 10%;
 }
+
+#team {
+	margin: 8%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-bottom: 100px;
+}
+
+.person {
+	margin: 10px;
+	margin-bottom: 30px;
+
+}
+.person p {
+	margin: 0;
+	font-size: 15px;
+	text-align: center;
+}
+
+.person .info {
+	font-weight: bold;
+}
+
+.person img {
+	height: 200px;
+	width: 200px;
+}
+
 
 #contact-section {
 	width: 100%;
@@ -396,9 +509,13 @@ video {
 	background-color: #400600;
 	color: white;
 	display: flex;
-	justify-content: center;
-	align-items: flex-end;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
 	padding-bottom: 30px;
+}
+#copyright {
+	font-size: 13px;
 }
 
 @-moz-keyframes spin {
